# ems_kg_poc

./: .dockerignore  .gitignore  Makefile  README.md  config.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  nfirs_ems_importer.py  pyproject.toml  validate_nfirs_csv.py
docker/compose/: base.yaml  dev.yaml  prod.yaml
docker/neo4j/: entrypoint.sh
docs/: ARCHITECTURE.md  SCHEMA.md
nfirs_lookup_codes/: v5.0_lookup_codes.csv
queries/: load_codes.cypher  load_ems_csv.cypher
sample_data/: ems_schema.csv  graph.md
sample_data/codes/: care_level_codes.csv  cause_illness_codes.csv  human_factor_codes.csv  injury_site_codes.csv
sample_data/lookup_codes/: arrest_rhythm_codes.csv  ems_disposition_codes.csv  ethnicity_codes.csv  gender_codes.csv  injury_type_codes.csv  patient_status_codes.csv  procedure_codes.csv  race_codes.csv  safety_equipment_codes.csv
scripts/: create_docker_secrets.sh  import_lookup_nodes.sh  update_secrets.sh  validate_nfirs_csv.sh
web_backend/: Dockerfile  pyproject.toml
web_backend/app/: README.md  config.py  database.py  main.py
web_backend/app/api/: query.py  upload.py
web_backend/app/utils/: import_data.py  validation.py
